--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lab1": "ts-node ./src/lab1/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/yuristrelets/architecture#readme",
   "devDependencies": {
     "@types/node": "^18.15.5",
+    "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
