--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lab1": "ts-node ./src/lab1/index.ts",
-    "lab2": "ts-node ./src/lab2/index.ts"
+    "lab2": "ts-node ./src/lab2/index.ts",
+    "lab3": "ts-node ./src/lab3/index.ts"
   },
   "private": true,
   "repository": {
