--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lab1": "ts-node ./src/lab1/index.ts",
     "lab2": "ts-node ./src/lab2/index.ts",
     "lab3": "ts-node ./src/lab3/index.ts",
-    "lab4": "ts-node ./src/lab4/index.ts"
+    "lab4": "ts-node ./src/lab4/index.ts",
+    "lab5": "ts-node ./src/lab5/index.ts"
   },
   "private": true,
   "repository": {
