--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lab2": "ts-node ./src/lab2/index.ts",
     "lab3": "ts-node ./src/lab3/index.ts",
     "lab4": "ts-node ./src/lab4/index.ts",
-    "lab5": "ts-node ./src/lab5/index.ts"
+    "lab5": "ts-node ./src/lab5/index.ts",
+    "lab6": "ts-node ./src/lab6/index.ts"
   },
   "private": true,
   "repository": {
