--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lab4": "ts-node ./src/lab4/index.ts",
     "lab5": "ts-node ./src/lab5/index.ts",
     "lab6": "ts-node ./src/lab6/index.ts",
-    "lab7": "ts-node ./src/lab7/index.ts"
+    "lab7": "ts-node ./src/lab7/index.ts",
+    "lab8": "ts-node ./src/lab8/index.ts"
   },
   "private": true,
   "repository": {
