--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lab5": "ts-node ./src/lab5/index.ts",
     "lab6": "ts-node ./src/lab6/index.ts",
     "lab7": "ts-node ./src/lab7/index.ts",
-    "lab8": "ts-node ./src/lab8/index.ts"
+    "lab8": "ts-node ./src/lab8/index.ts",
+    "lab9": "ts-node ./src/lab9/index.ts"
   },
   "private": true,
   "repository": {
